DFR-470: Fix fortify for gradle